# CVAC

./: .cproject  .gitattributes  .gitignore  .project  CMakeLists.txt  CTestCustom.cmake.in  Doxyfile.in  LICENSE.txt  README.md  ____init_____8py.html  _confusion_matrix_8cpp__incl.md5  _confusion_matrix_8h.html  _confusion_matrix_8h__dep__incl.md5  _confusion_matrix_8h_source.html  _corpus_8ice.html  _data_8ice__dep__incl.md5  _detector_data_archive_8cpp.html  _detector_data_archive_8cpp__incl.map  _detector_data_archive_8cpp__incl.md5  _detector_data_archive_8h__incl.map  _detector_data_archive_8h__incl.md5  _file_utils_8cpp.html  _file_utils_8cpp__incl.map  _file_utils_8cpp__incl.md5  _file_utils_8h.html  _file_utils_8h__dep__incl.md5  _file_utils_8h__incl.md5  _file_utils_8h_source.html  _files_8ice.html  _media_converter_8cpp.html  _media_converter_8cpp__incl.map  _media_converter_8cpp__incl.md5  _media_converter_8h__dep__incl.map  _media_converter_8h__incl.map  _media_converter_8h_source.html  _msg_logger_8h__incl.map  _msg_logger_8h__incl.md5  _msg_logger_8h_source.html  _output_results_8cpp.html  _output_results_8h.html  (+455 more)
CMakeModules/: FindIce.cmake  (+9 more)
algorithms/: CMakeLists.txt
algorithms/Bow/bowCV_source/: CMakeLists.txt
algorithms/Bow/bowICEServer/: BowICEI.cpp  BowICEI.h  BowICEServiceI.h  CMakeLists.txt
algorithms/Bow/bowICEServerTrain/: BowICEServiceTrainI.cpp  BowICEServiceTrainI.h  BowICETrainI.cpp  BowICETrainI.h
algorithms/OpenCVPerformance/: CvPerfICEServiceTrainI.cpp  DetectorI.h  cvPerformanceTrainerCVAC.h  cvboost.cpp  cvcommonCVAC.h  cvhaarclassifier.cpp  cvhaartraining.cpp  cvhaartrainingCVAC.h  cvsamples.cpp  haartrainingCVAC.cpp
algorithms/bow/: CMakeLists.txt
algorithms/bow/detectorService/: BowICEI.cpp  BowICEI.h  CMakeLists.txt
algorithms/bow/lib/: CMakeLists.txt  bowCV.cpp  bowCV.h
algorithms/bow/trainerService/: BowICETrainI.cpp  BowICETrainI.h  CMakeLists.txt
algorithms/opencv_cascade/: CMakeLists.txt  README.txt
algorithms/opencv_cascade/createsamples/: CMakeLists.txt  _cvcommon.h  cvsamples.cpp  mergevec.cpp  utility.cpp
algorithms/opencv_cascade/detectorService/: CMakeLists.txt  CascadeDetectI.cpp  CascadeDetectI.h
algorithms/opencv_cascade/haartraining/: CMakeLists.txt  cvsamples.cpp  mergevec.cpp
algorithms/opencv_cascade/traincascade/: CMakeLists.txt  HOGfeatures.h  cascadeclassifier.cpp  imagestorage.cpp
algorithms/opencv_cascade/traincascade3.0/: CMakeLists.txt  imagestorage.cpp  old_ml_precomp.hpp  private.delete
algorithms/opencv_cascade/trainerService/: CMakeLists.txt  CascadeTrainI.cpp  CascadeTrainI.h
algorithms/rsitest/: CMakeLists.txt
algorithms/rsitest/detectorService/: CMakeLists.txt  RSItrICEI.cpp  RSItrICEI.h
algorithms/sample/: CMakeLists.txt
demo/: CMakeLists.txt  Recognition.py  async_bow.py  bootstrapping.py  bowDemo_ROC.py  comparison.py  demos.html  detect.py  evaluation.py  evaluation_detectors.py  full_image_corpus.py  labelme_corpus.py  labelme_pycorpus.py  prerequisites.py  remote_services.ipynb  remote_services.py  runset.py  shotboundary.py  tracking.py  training.py
etc/: CMakeLists.txt  PostInstall.cmake.in  config.admin.in  config.client.in  config.grid.in  config.grid_client.in  config.grid_service.in  config.icebox.in  config.java_admin.in  config.java_icebox.in  config.service.in  cvac_icegrid.xml.in  dylib_change.py  initIcegrid.bat.in  initIcegrid.sh.in  python.config.in  runGridAdmin.bat.in  runGridAdmin.sh.in  runIceTest.bat.in  runIceTest.sh.in  setup.easy.py.in  setup.ice.py.in  setup.py.in  setup.py.win.in  startIcebox.bat.in  startIcebox.sh.in  startIcegrid.bat.in  startIcegrid.sh.in  startServices.bat  startServices.bat.in  startServices.sh  startServices.sh.in  stopIcebox.bat.in  stopIcebox.sh.in  stopIcegrid.bat.in  stopIcegrid.sh.in  stopServices.bat  stopServices.bat.in  stopServices.sh  stopServices.sh.in  (+1 more)
etc/pack_3rdparty/: CMakeLists.txt
etc/pack_binary/: CMakeLists.txt  EasyComputerVision.icns  Info.plist.in  installNumpy.py  installPython.py  startup.py  startup.sh  winstart.bat
src/: CMakeLists.txt  Corpus.ice  Data.cpp  Data.h  Data.ice  FileServer.ice  Files.ice  Purpose.java.in  Services.ice
src/caffePlot/: caffePlot.py
src/clients/: CMakeLists.txt
src/clients/autopsyPlugin/: CVACFileIngestModule.py  DetectorCallbackHandlerI.java  README.TXT
src/clients/detectorClient/: CMakeLists.txt  Client.cpp
src/clients/trainerClient/: CMakeLists.txt  config.client  readme.txt  trainerClient.cpp
src/convert/: CMakeLists.txt  ConvertUtils.cpp  convertVatic.cpp
src/cvac/: CMakeLists.txt
src/cvac/CVACcorpus/: CommonDataSet.java  CorpusConfig.java  CorpusI.java  CorpusServer.java  CorpusServiceI.java  LabelMeDataSet.java  LabelableListI.java
src/cvac/corpus/: CommonDataSet.java  Corpus.java  CorpusConfig.java  CorpusI.java  CorpusServer.java  CorpusServiceI.java  LabelMeDataSet.java  LabelableListI.java
src/cvac/fileserver/: FileServer.java  FileServiceI.java
src/easy/: AlgorithmHelper.py  CMakeLists.txt  __init__.py  cascade_demo.py  corpus.py  corpus_service.py  demo.py  demo_unwrapped.py  easy.py  evaluate.py  fileserver.py  gui.py  labelme.py  paths.py.in  setup.py.in  vatic.py  version.py.in  videosegment.py
src/easy/util/: ArchiveHandler.py  GuiThread.py  clipper.py  misc.py
src/servsup/: CMakeLists.txt  cvutil.py  files.py
src/util/: CMakeLists.txt  Code_Utils.java  ConfusionMatrix.cpp  Data_IO_Utils.java  DetectorDataArchive.cpp  DownloadUtils.java  FileUtils.cpp  MediaConverter.cpp  OutputResults.cpp  RunSetIterator.cpp  RunSetWrapper.cpp  RunSetWrapper.java  ServiceInvocation.cpp  ServiceMan.cpp  VLogger.cpp  processLabels.cpp  processRunSet.cpp
test/UnitTests/: CMakeLists.txt  ConfusionMatrixTests.cpp  ConvertVaticTests.cpp  FileUtilsTests.cpp  main.cpp
test/UnitTests/python/: CMakeLists.txt  Caltech101.properties  CorpusServerTest.py  EasyTest.py  FileServerTest.py  LabelMeAK47.properties  MiniTutorialTest.py  RunsetIteratorTest.py  UserTest.py.in  run.bat
test/detectorClient/: CMakeLists.txt  Client.cpp  readme.txt
(+1128 files in other folders)
